--- a/TR-TestGeneration/.project
+++ b/TR-TestGeneration/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TR-TestGeneration</name>
+	<name>TR-TestGeneration1</name>
 	<comment></comment>
 	<projects>
 	</projects>
