--- a/TR-TestGeneration/.classpath
+++ b/TR-TestGeneration/.classpath
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="ExtJars"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="ExtJars/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="ExtJars/commons-fileupload-1.3.1.jar"/>
+	<classpathentry kind="lib" path="ExtJars/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="ExtJars/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="ExtJars/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="ExtJars/galimatias-0.1.0.jar"/>
+	<classpathentry kind="lib" path="ExtJars/htmlparser-1.4.1.jar"/>
+	<classpathentry kind="lib" path="ExtJars/icu4j-54.1.1.jar"/>
+	<classpathentry kind="lib" path="ExtJars/isorelax-20030108.jar"/>
+	<classpathentry kind="lib" path="ExtJars/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="ExtJars/jing-20130806VNU.jar"/>
+	<classpathentry kind="lib" path="ExtJars/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="ExtJars/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="ExtJars/loremipsum.jar"/>
+	<classpathentry kind="lib" path="ExtJars/rhino-1.7R5.jar"/>
+	<classpathentry kind="lib" path="ExtJars/Saxon-HE-9.6.0-4.jar"/>
+	<classpathentry kind="lib" path="ExtJars/validator-15.3.14.jar"/>
+	<classpathentry kind="lib" path="ExtJars/xercesImpl-2.9.1.jar"/>
+	<classpathentry kind="lib" path="ExtJars/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
